--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Alumni Map</title>
@@ -14,10 +14,10 @@
     </div>
 <nav>
     <div class="left-link">
-        <a href="map.html">Home</a>
+        <a href="{{url_for('index')}}">Home</a>
     </div>
     <div class="right-link">
-        <a href="#">Login</a>
+        <a href="{{url_for('logout')}}">Logout</a>
     </div>
 </nav>
 <div align="center">
