--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -34,7 +34,8 @@ nav a:hover {
 }
 
 #map {
-    width: 100%; 
-    height: 750px; 
-    display: block;
+    height: 530px;
+    /* The height is 530 pixels */
+    width: 100%;
+    /* The width is the width of the web page */
 }
